--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body{
 }
 
 header {
+    color: black;
     padding: 0 30px;
     width: 100%;
     height: 100px;
@@ -109,6 +110,33 @@ section h2 {
   visibility: hidden;
 }
 
+
+/* Dark mode styles */
+
+.button-x {
+  width: 4rem;
+  height: 4rem;
+  position: fixed;
+  bottom: 3vh;
+  left: 2vw;
+  font-size: 2rem;
+  padding: 1rem;
+  border-radius: 50%;
+  background-color: rgb(250, 164, 3);
+  border: none;
+  transition: all 0.3s ease;
+}
+
+.button-x:hover {
+  background-color: rgba(15, 15, 15, 0.829);
+  color:rgb(250, 164, 3);
+}
+
+
+.dark-mode {
+  background-color: rgba(17, 16, 16, 0.623);
+  color: rgb(250, 164, 3);
+}
 
 /*!
  * Hamburgers
