--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
 
 :root {
@@ -43,8 +43,14 @@ h1 {
   font-size: var(--step-2);
 }
 
+.container {
+  max-width: 980px;
+  margin: 0 auto;
+}
+
 .panel {
     background-color: rgba(29, 27, 27, 0.89);
+    overflow-y: auto;
     width: 100%;
     position: fixed;
     top: 0;
@@ -55,6 +61,7 @@ h1 {
     transition: transform 0.5s ease;
     transform: translate(-100%, 0);
 }
+
 .is-activeX{
     transform: translate(0, 0);
   
@@ -86,7 +93,7 @@ h1 {
 }
 
 section {
-    height: 100vh;
+    height: auto;
     max-width: 1200px;
     margin-right: auto;
     margin-left: auto;
@@ -95,9 +102,15 @@ section {
 }
 
 section h2 {
-    padding-top: 7rem;
-    font-size: 2rem;
+    padding: 1rem 0;
+    font-size: 2.5rem;
 }
+
+#seccion2, #seccion3,#seccion4, #seccion5, #seccion6,#seccion7,#seccion8,#seccion9, #seccion10  {
+  margin-top: 30vh;
+}
+
+
 
 #scroll-button {
     position: fixed;
@@ -267,3 +280,351 @@ section h2 {
       transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1); }
   
   /*
+
+/*  ******************** clock and alarm *****************/
+
+.container {
+  margin: 0 auto;
+}
+
+.clock {
+  max-width:  700px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: black;
+  color: white;
+  font-size: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 7px;
+}
+
+.disable {
+  visibility: hidden;
+}
+
+.btn-container {
+  padding-top: 5rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+
+.clock-btn {
+  padding: 1rem 2rem;
+  margin: 0 15px;
+  background-color: rgba(34, 152, 206, 0.377);
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+/* shortcut and key events******************************************* */
+
+.circle-container{
+  max-width: 1200px;
+  width: 100%;
+  min-height: 50vh;
+  margin: 10px auto  0 auto ;
+  display: flex;
+  background-color: aqua;
+ 
+}
+
+.circle {
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  background-color: black;
+  border-radius: 50%;   
+}
+
+
+.instructions {
+  margin: 0 auto;
+  padding: 3rem 0rem;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+/*********************************** countdown ************************************** */
+.countdown {
+
+  margin: 50px auto;
+  padding: 50px;
+  text-align: center;
+  font-size: 3rem;
+  background-color: rgba(91, 182, 182, 0.39);
+  border-radius: 30px;
+}
+
+/* **********************************responsive tester***************************************** */
+
+
+.tester {
+  margin: 50px auto;
+  max-width: 900px;
+  display: flex;
+  justify-content: center;
+}
+
+form input[type=text], input[type=url] {
+  font-size: 1.7rem;
+  padding: .3rem;
+  margin: 0.2rem;
+  border: 1px solid black;
+}
+
+form input[type=submit], input[type=button]{
+  margin: .5rem 0;
+  padding: 0.5rem 3rem;
+  font-size: 1.5rem;
+  background-color: aquamarine;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+} 
+
+
+/* javascript responsive */
+
+#youtube, #map {
+  max-width: 950px;
+  width: 100%;
+  margin: 3rem auto;
+  display: flex;
+  justify-content: center;
+}
+
+/* Images corousel */
+
+.slider-container {
+  text-align: center;
+  position: relative;
+  width: 80%;
+  margin: 1rem auto;
+}
+
+.sliders {
+  position: relative;
+  height: 510px;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1rem 0;
+  width: 100%;
+  margin: 1.5rem auto;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease;
+}
+
+.slider.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.slider img {
+  height: inherit;
+  width: inherit;
+  object-fit: cover;
+  object-position: 50% 0%;
+}
+
+.slider h3 {
+  font-size: 1.3rem;
+  padding: .5rem;
+}
+
+.slider p {
+  font-size: 1.1rem;
+  padding: .5rem;
+}
+
+.slide-btn {
+  position: absolute;
+  top: 50%;
+  font-size: 3rem;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-weight: bold;
+}
+
+.slide-btn a {
+  display: block;
+  width: 70px;
+  height: 70px;
+  background-color: wheat;
+  border-radius: 50%;
+  border: 1px solid gray;
+}
+
+.slide-btn a:hover {
+  color: wheat;
+  background-color:purple;
+}
+
+
+/* forms validation */
+
+.form-container {
+  --color-ok-form: rgb(6, 143, 6);
+  --color-error-form: rgb(250, 8, 8);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem 0;
+}
+
+.contact-form {
+  width: 70%;
+
+}
+
+.contact-form > * {
+  display: block;
+}
+
+.contact-form legend,
+.contact-form-response {
+  font-size: 2rem;
+  padding: .5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.contact-form input,
+.contact-form textarea {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  padding: 0.7rem;
+  margin: .5rem 0;
+  width: 100%;
+  font-size: 1rem;
+  resize: none;
+}
+
+.contact-form input[type="submit"] {
+  width: 50%;
+  margin: auto;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.contact-form *::placeholder {
+  color: rgba(46, 51, 56, 0.555);
+}
+
+.contact-form [required]:valid{
+  border: thin solid var(--color-ok-form);
+}
+
+.contact-form [required]:invalid{
+  border: thin solid var(--color-error-form);
+}
+
+.contact-form-loader {
+  text-align: center;
+}
+
+.contact-form-error {
+  text-align: center;
+  margin-top: -1rem;
+  padding: .5rem;
+  font-size: 80%;
+  background-color: var(--color-error-form);
+  color: #fff;
+  transition: all 800ms ease; 
+}
+
+.contact-form-error.is-active {
+  display: block;
+  animation: show-message 1s 1 normal 0s ease-out both;
+}
+
+.none {
+  display: none;
+}
+
+@keyframes show-message {
+  0% {
+      visibility: hidden;
+      opacity: 0;
+  }
+
+  100% {
+      visibility: visible;
+      opacity: 1;
+  }   
+}
+
+/* filter images */
+
+#my-input {
+   
+  margin-bottom: 15px; 
+  background-image: url("/assets/loupe.png");
+  background-position: 12px 18px;
+  background-repeat: no-repeat;
+  width: 400px;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  font-size: 1.2rem;
+}
+
+.images {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.card {
+  background-color: rgba(129, 148, 147, 0.274);
+  padding-bottom: 1rem;
+  margin: 1rem;
+  transition: all 0.3s ease-out;
+}
+
+.card figcaption {
+  font-size: 1.2rem;
+}
+
+.hide {
+  visibility: hidden;
+  opacity: 0;
+  order: 1;
+}
+
+/* lottery */
+
+.lottery {
+  padding-bottom: 5rem;
+  font-size: 1.4rem;
+}
+
+#countries {
+  list-style: none;
+  padding-bottom: 1rem;
+}
+
+#button {
+  padding: .5rem;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+/* geolocation */
+
+.geolocation {
+  text-align: center;
+  font-size: 1.5rem;
+}
